...
          },
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: "Co-Pilot",
            tabBarIcon: ({ color, size }) => (
              <Bot size={size || 22} color={color} />
            ),
          }}
        />

...
          }}
        />

        <Tabs.Screen
          name="workspace"
          options={{
            title: "Workspace",
            tabBarIcon: ({ color, size }) => (
              <Sliders size={size || 22} color={color} />
            ),
          }}
        />

...
